--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -1,7 +1,28 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <meta name="viewport" content="initial-scale=1.0">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <meta charset="utf-8">
+    <style>
+        /* Always set the map height explicitly to define the size of the div
+        * element that contains the map. */
+        #map {
+            height: 500px;
+            width: 500px;
+        }
+        /* Optional: Makes the sample page fill the window.  */
+        html, body {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
     <title></title>
 </head>
 <body>
@@ -9,50 +30,63 @@
         <!-- Top half of screen -->
         <div class="row">
             <!-- For map -->
-            <div class="col-md-10">
-                
+            <!-- div class="col-md-9" id="map" style="height:100%; width:100%"-->
+            <div class="col-md-9" id="map">
             </div>
             <!-- For 'My Flights' -->
-            <div class="col-md-2">
-                <table class="table table-sm table-hover">
-                    <caption>My Flights</caption>
-                    <thead class="thead-dark">
-                        <tr>
-                            <th scope="col">Flight Id</th>
-                            <th scope="col">Company</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                    </tbody>
-                </table>
+            <div class="col-md-3">
+                <button onclick="addMyFlightsT(event)">init!</button>
+                <h1 style="font-size:20px">My Flights</h1>
+                    <table class="table table-sm table-hover" id="myFlightsT" ondrop="internDrop(event);" ondragover="dragOverHandler(event);">
+                        <thead>
+                            <tr>
+                                <th scope="col">Flight ID</th>
+                                <th scope="col">Company</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
         <!-- Bottom half of screen -->
         <div class="row">
             <!-- For 'Flight Details' -->
-            <div class="col-md-10">
+            <div class="col-md-9">
+                <h1 style="font-size:20px">Flight Details</h1>
+                    <table class="table table-md table-hover" id="flightDetails">
+                        <thead>
+                            <tr>
+                                <th scope="col">Flight ID</th>
+                                <th scope="col">Company</th>
+                                <th scope="col">Source</th>
+                                <th scope="col">Destination</th>
+                                <th scope="col">Takeoff time</th>
+                                <th scope="col">Landing time</th>
+                                <th scope="col">Passengers</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- For External Flights -->
+            <div class="col-md-3">
+                <h1 style="font-size:20px">External Flights</h1>
+                    <table class="table table-sm table-hover" id="externFlightsT" ondrop="externDrop(event);" ondragover="dragOverHandler(event);">
+                        <thead>
+                            <tr>
+                                <th scope="col">Flight ID</th>
+                                <th scope="col">Company</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <!-- For External Flights -->
-            <div class="col-md-2">
-                <table class="table table-sm table-hover">
-                    <caption>External Flights</caption>
-                    <thead class="thead-dark">
-                        <tr>
-                            <th scope="col">Flight Id</th>
-                            <th scope="col">Company</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                    </tbody>
-                </table>
             </div>
-        </div>
-    </div>
-    <script src="bin\jquery\jquery-3.5.1.js">
-    </script>
-    <script src="bin\js\bootstrap.js">
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYRuCXSwOYf9EMT6RP5AtWpe6beY9BRrU&callback=initMap" async defer></script>
+    <script src="webScripts.js?v=2"></script>
 </body>
 </html>
