--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -1,7 +1,9 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html>
 <head>
-    <script src="webScripts.js?v=2"></script>
+    <script src="webScripts.js?v=2" async defer></script>
+    <script src="mapScripts.js?v=2" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYRuCXSwOYf9EMT6RP5AtWpe6beY9BRrU&callback=initMap" async defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -36,7 +38,7 @@
             </div>
             <!-- For 'My Flights' -->
             <div class="col-md-3">
-                <button onclick="addMyFlightsT(event)">init!</button>
+                <button onclick="initFlights(event)">init!</button>
                 <h1 style="font-size:20px">My Flights</h1>
                 <table class="table table-sm table-hover" id="myFlightsT" ondrop="internDrop(event);" ondragover="dragOverHandler(event);">
                     <thead>
@@ -87,7 +89,5 @@
             </div>
         </div>
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYRuCXSwOYf9EMT6RP5AtWpe6beY9BRrU&callback=initMap" async defer></script>
-    <script src="mapScripts.js?v=2"></script>
 </body>
 </html>
