--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -43,7 +43,7 @@
             </div>
             <!-- For 'My Flights' -->
             <div class="col-md-3">
-                <button onclick="addMyFlightsT(event)">init!</button>
+                <button onclick="initFlights(event)">init!</button>
                 <h1 style="font-size:20px">My Flights</h1>
                 <table class="table table-sm table-hover" id="myFlightsT" ondrop="internDrop(event);" ondragover="dragOverHandler(event);">
                     <thead>
