--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -44,6 +44,8 @@
             <!-- For 'My Flights' -->
             <div class="col-md-3">
                 <button onclick="initFlights(event)">init!</button>
+                <button onclick="sendFlightPlan(event)">send flightP</button>
+                <button onclick="getLocation(event)">get flight Loc</button>
                 <h1 style="font-size:20px">My Flights</h1>
                 <table class="table table-sm table-hover" id="myFlightsT" ondrop="internDrop(event);" ondragover="dragOverHandler(event);">
                     <thead>
