added marking flights

--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -34,6 +34,11 @@
     <title></title>
 </head>
 <body>
+    <div class="row justify-content-md-center">
+        <div class="alert alert-info" id="notificationWindow">
+            <strong id="notification"></strong>
+        </div>
+    </div>
     <div class="container-fluid">
         <!-- Top half of screen -->
         <div class="row">
