--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -35,7 +35,7 @@
             position: absolute;
             top: 0;
             z-index: 1;
-            width: 70%;
+            width: 40%;
             opacity : 3;
         }
 
@@ -47,7 +47,7 @@
             color: white;
             position: relative;
             z-index: 1;
-            background-color: #8694FF;
+            background-color: #00cc66;
             opacity: 3;
         }
 
